# Zombie

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.netlify  README.md  Shell.css  game.js  game.wasm  index.html  install_emscripten.sh  makefile  netlify.toml  package-lock.json  package.json  server.js  unix  vercel.json
.github/: deploy.yml
.github/workflows/: build-and-deploy.yml  c-cpp.yml  cmake-build-web.yml
Arcive/vercel/: package-lock.json  package.json  server.js  vercel.json
Arcive/vercel/public/: game.js  game.wasm  index.html
src/: BoidComponent.h  BoidSystem.h  CameraInput.cpp  CameraInput.hpp  CollisionDetection.h  ComponentTypes.h  DrawSystem.h  DynamicTreeSystem.h  Entity.h  Game.cpp  Game.hpp  Grid.h  IndexIdLookup.h  Log.hpp  MathHack.hpp  MfBoidSystem.h  MoveSystem.h  OutOfBoundsSystem.h  PositionComponent.h  PositionComponent.hpp  QuadTree.h  SearchResult.h  Settings.h  SimpleOutOfBoundsSystem.h  SpeedComponent.h  System.h  Systems.h  ThreadPool.h  Timer.cpp  Timer.hpp  VelocityComponent.h  World.hpp  ZombieFactory.h  main.cpp  t.cpp
src/ECS/Component/: CircleShapeComponent.hpp  Transform.hpp
src/ECS/Entity/: Entity.hpp
src/ECS/Systems/: DrawCircleShapeSystem.hpp  System.hpp
src/tests/: CircleComponentTest.hpp
